# LillyMol

./: .dockerignore  .gitignore  .vilerc  Dockerfile  Makefile  NEWS.md  README  README.md  README_OSX.md  RELEASE_NOTES  cleanup.sh  docker-compose.yml  makeall.sh  makeall_osx.sh  makeall_rh6.sh  makeall_rh7.sh  makeall_rh8.sh  makefile.public.Linux-gcc-6.2.0  makefile.public.Linux-gcc-7.2.1  makefile.public.Linux-gcc-8.3.1  makefile.public.OSX-gcc-8  run_python.sh
src/: .bazelrc  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  MODULE.bazel  Makefile  WORKSPACE  WORKSPACE.container  build_from_src.sh  build_linux.sh  build_macos.zsh  build_third_party.sh  copy_shared_libraries.sh  install_binaries.sh  make_cppzmq_lly.sh  run_python.sh  run_python_unit_tests.sh  update_bazel_configs.sh  update_python_in_workspace.py
src/BerkeleyDB/: BUILD  enough_inventory_bdb.cc  iwbdb_cat.cc  iwbdb_compare.cc  iwbdb_fetch.cc  iwbdb_list.cc  iwbdb_load.cc  unpack_data.cc  unpack_data.h
src/Duplicates/: BUILD  aggregate_rings.py  topological_torsion.cc  topological_torsion.h  topological_torsion_main.cc  topological_torsion_test.cc
src/Foundational/: Makefile
src/Molecule_Lib/: BUILD  CMakeLists.txt  ISIS_Atom_List.cc  Makefile  _collection_template_float.cc  _collection_template_uint.cc  _istream_and_type.cc  _iwaray_coords.cc  _iwaray_csubs.cc  _iwaray_ofsmtype.cc  _iwaray_p_rmele.cc  _iwaray_p_rs.cc  _iwaray_path_scoring.cc  _iwaray_rxn.cc  _iwaray_set_of_atoms.cc  _iwaray_ssq.cc  _iwaray_sym.cc  _mdl_molecule.cc  _qry_wcharge.cc  _qry_wstats.cc  _resizable_array_atom.cc  _resizable_array_atom_list.cc  _resizable_array_bond.cc  _resizable_array_const_set_of_atoms.cc  _resizable_array_element.cc  _resizable_array_lors.cc  _resizable_array_mdl_atom.cc  _resizable_array_molecule.cc  _resizable_array_molecule_to_match.cc  _resizable_array_p_beep.cc  _resizable_array_p_bond.cc  _resizable_array_p_cs.cc  _resizable_array_p_ctb.cc  _resizable_array_p_element.cc  _resizable_array_p_ema.cc  _resizable_array_p_etr.cc  _resizable_array_p_fpc.cc  _resizable_array_p_mgroup.cc  _resizable_array_p_path.cc  _resizable_array_p_pthmsg.cc  (+292 more)
src/Molecule_Tools/: BUILD  CMakeLists.txt  INT_iwdescr_fp.cc  INT_tsubstructure_fp.cc  Makefile  README.md  SAFE_generate.cc  _resizable_array_nas.cc  abraham.cc  activity_consistency.cc  aggregate_replacement_rings.cc  align_molecule.cc  alogp.cc  alogp.h  alogp_main.cc  alogp_test.cc  atom_pair_fingerprint_main.cc  atom_triples.cc  atomic_distance_fingerprint.cc  atomic_distance_fingerprint.proto  buildsmidb_bdb.cc  bump_check.cc  charge_fingerprint.cc  chirality_fingerprint.cc  circular_fingerprint.cc  circular_fingerprint.h  comma_related_procedures.cc  comma_related_procedures.h  common_names.cc  common_names.proto  count_atoms_in_smiles.cc  ct_cache.h  dbf.cc  demerit.cc  demerit.h  demerit.proto  dicer.cc  dicer_api.cc  dicer_api.h  dicer_api_test.cc  (+295 more)
src/Molecule_Tools_Bdb/: BUILD  buildsmidb_bdb.cc  dicer2bdb.cc  dicer_fragment_lookup_bdb.cc  dicer_fragment_replace.cc  in_lilly_database_bdb.cc  iwecfp_database.cc  iwecfp_database.h  iwecfp_database_load.cc  iwecfp_database_lookup.cc  iwecfp_database_lookup_lib.cc  iwecfp_database_lookup_lib.h  molecule_database_options.cc  molecule_database_options.h  molecule_database_options.proto  selimsteg.cc  selimsteg.h  selimsteg_build.cc  smi2rings.proto  smi2rings_bdb.cc  smi2rings_bdb_lib.cc  smi2rings_bdb_lib.h  storage_conditions.cc  structure_database.cc  structure_database.h  structure_database_load.cc  structure_database_lookup.cc  substituent_identification.cc  substituent_identification.proto
src/Obsolete/: BUILD  README.md  cluster_eval.cc  cluster_eval.h  complex_chirality.cc  concat_files_large_memory.cc  confusion_matrix.cc  descriptor_evaluation.cc  descriptor_file_profile_activity.cc  descriptor_file_same_row_order.cc  descriptor_file_to_mahalanobis_gfp.cc  descriptor_file_to_molecular_properties.cc  dicer_bdb_lookup.cc  dicer_to_db_store.cc  fingerprint_weights_to_atom_colours.cc  folded.cc  gfp_bit_filter.cc  gfp_difference_fingerprint.cc  gfp_evaluate_clustering.cc  gfp_group_spread.cc  gfp_leader_opt_v2.cc  gfp_leader_standard_threaded.cc  gfp_leader_threaded.cc  gfp_naive_bayesian_multiclass.cc  gfp_nearneighbours_threaded.cc  gfp_nnactivity.cc  gfp_proximity_descriptors.cc  gfp_server.cc  gfp_spread_mpi.cc  gfp_spread_mpi_v2.cc  gfp_spread_standard_cilk.cc  gfp_spread_standard_tbb.cc  gfp_spread_standard_threaded.cc  gfp_spread_standard_threaded_mc.cc  gfp_spread_threaded.cc  gfp_test_train_split.cc  gfp_vector_differences.cc  inchi.cc  leader_parallel.cc  leader_parallel.h  (+12 more)
src/Utilities/: Makefile
src/build_deps/: configs.bzl  install.bzl
src/go/: BUILD  README.md  grep_sdf.go  no_spaces_in_file_name.go  parallel_process_file.go  regression_to_classification.go  rxn_reverse.go  rxnsmiles2smi.go
src/hello_world/: BUILD  hello_world.cc
src/julia/: AAREADME.md  BUILD  LillyMol.jl  LillyMolSubstructure.jl  bag.cc  bag.jl  lillymol.cc  lillymol_1_indexing.cc  lillymol_test.jl  molecule.cc  resizable_array_holder.h  substructure_test.jl
src/pybind/: BUILD  carbon.qry  lillymol_dicer_test.py  lillymol_fingerprint_test.py  lillymol_io_test.py  lillymol_pybind.cc  lillymol_pybind_atom.cc  lillymol_pybind_bond.cc  lillymol_pybind_chiral_centre.cc  lillymol_pybind_dicer.cc  lillymol_pybind_fingerprint.cc  lillymol_pybind_io.cc  lillymol_pybind_query.cc  lillymol_pybind_reaction.cc  lillymol_pybind_ring.cc  lillymol_pybind_set_of_atoms.cc  lillymol_pybind_similarity.cc  lillymol_pybind_std.cc  lillymol_pybind_tools.cc  lillymol_pybind_tools_bdb.cc  lillymol_pybind_tsubstructure.cc  lillymol_reaction_test.py  lillymol_set_of_atoms_test.py  lillymol_substructure_test.py  lillymol_test.py  lillymol_tsubstructure_test.py  lillymol_unique_molecules_test.py  molecule.cc  molecule.h  nitrogen.qry  tsubstructure.cc  tsubstructure.h
src/toolchain/: BUILD  cc_toolchain_config.bzl
src/xgboost/: BUILD  random_forest_model.proto  xgboost_model.proto  xgboost_model_evaluate.cc
(+3330 files in other folders)
